# darwin-sdk

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
rust/: Cargo.toml
rust/scripts/: paraswap_quote.sh  rebalance_exec_sepolia.sh  rebalance_via_uniswap.sh  uniswap_quote.sh
rust/src/: deposit.rs  lib.rs  rebalance.rs  redeem.rs
rust/tests/: rebalance_simulation.rs
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: baskets.ts  deposit.ts  index.ts  rebalance.ts  redeem.ts
ts/tests/: deposit.test.ts  rebalance.test.ts  redeem.test.ts
