[package]
name = "darwin-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Darwin Protocol client SDK (Rust core) wrapping miden-client and miden-agglayer."
repository = "https://github.com/darwin-miden/darwin-sdk"

[dependencies]
darwin-baskets        = { git = "ssh://git@github.com/darwin-miden/darwin-baskets.git" }
darwin-bridge-adapter = { git = "ssh://git@github.com/darwin-miden/darwin-bridge-adapter.git" }
miden-client          = "0.14"
miden-objects         = "0.12"
serde     = { version = "1", features = ["derive"] }
thiserror = "1"
tokio     = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
chrono    = { version = "0.4", default-features = false, features = ["clock"] }
