[package]
name = "darwin-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Darwin Protocol client SDK (Rust core) wrapping miden-client and miden-agglayer."
repository = "https://github.com/darwin-miden/darwin-sdk"

[dependencies]
darwin-baskets        = { git = "https://github.com/darwin-miden/darwin-baskets.git" }
darwin-bridge-adapter = { git = "https://github.com/darwin-miden/darwin-bridge-adapter.git" }
miden-client          = "0.14"
miden-objects         = "0.12"
serde     = { version = "1", features = ["derive"] }
thiserror = "1"
tokio     = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
chrono    = { version = "0.4", default-features = false, features = ["clock"] }

# Live Pragma path for the rebalance bot. Enabled with --features pragma-live.
[dependencies.darwin-oracle-adapter]
git      = "https://github.com/darwin-miden/darwin-oracle-adapter.git"
features = ["pragma-live"]
optional = true

[dependencies.miden-client-sqlite-store]
version  = "0.14"
optional = true

[dependencies.miden-protocol]
version  = "0.14"
optional = true

[dependencies.anyhow]
version  = "1"
optional = true

[features]
default = []
pragma-live = [
    "dep:darwin-oracle-adapter",
    "dep:miden-client-sqlite-store",
    "dep:miden-protocol",
    "dep:anyhow",
]
